admin page design

--- a/src/components/Common/LayoutComponent/style.scss
+++ b/src/components/Common/LayoutComponent/style.scss
@@ -13,7 +13,7 @@
         transition: all .3s ease;
         min-height: 100vh;
         margin-left: 80px;
-        padding: 50px;
+        padding: 24px 48px;
         transition: all 0.5s ease 0s;
     }
 
