--- a/src/components/Admin/Member/style.scss
+++ b/src/components/Admin/Member/style.scss
@@ -1,30 +1,17 @@
 @import '../../../global.scss';
-
-.card-title{
-    display: flex;
-    align-items: center;
-
-    h2{
-        font-size: 20px;
-        line-height: 30px;
-        color: $fonts-light;
-        margin: 0;
+.card-body {
+    padding: 0px;
+    .table-header {
+        padding: 25px 24px 0 25px;
     }
-
-    span{
-        color: $primary;
-        font-size: 12px;
-        line-height: 18px;
-        padding: 2px 8px;
-        background: #F9F9FB;
-        border-radius: 16px;
-        margin: 5px;
-
+    .card-title{
+        display: flex;
+        align-items: center;
+        margin-bottom: 37px;
     }
 }
 
 .search-filter-sort{
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
