--- a/src/components/Common/Dropdown/style.scss
+++ b/src/components/Common/Dropdown/style.scss
@@ -20,4 +20,8 @@
         line-height: 20px;
         color: $fonts-light;
     }
+    &:focus,
+    &:hover {
+        box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 0px 0px 4px rgba(16, 24, 40, 0.06);
+    }
 }
