--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -7,7 +7,7 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
-  margin: 24px 0;
+  margin: 12px 0 0;
   background-color: $white;
   box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
     0 1px 2px rgba(16, 24, 40, 0.06);
@@ -15,11 +15,17 @@ table {
 
   thead {
     tr {
-      border-radius: 8px 8px 0 0;
+      border-radius: 0;
+      th {
+        &:first-child {
+          padding-left: 24px;
+        }
+      }
     }
   }
   tbody {
     tr {
+      cursor: pointer;
       &:nth-child(even) {
         background-color: $grey-50;
       }
@@ -45,15 +51,20 @@ table {
           }
         }
       }
-      cursor: pointer;
+      td {
+        &:first-child {
+          padding-left: 24px;
+        }
+      }
     }
   }
   td {
-    padding: 26px 16px;
-    color: $fonts-grey-700;
+    padding: 16px;
+    color: $fonts-light;
     font-size: 14px;
     line-height: 20px;
     vertical-align: middle;
+    font-weight: 400;
     .img-wrapper {
       width: 40px;
       height: 40px;
@@ -97,4 +108,16 @@ table {
       border-radius: 0 0 0 8px;
     }
   }
+}
+
+
+.avatar-text{
+  width: 40px;
+  height: 40px;
+  font-size: 16px;
+  border-radius: 20px;
+  background-color: $primary-100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
