--- a/src/components/Admin/Member/style.scss
+++ b/src/components/Admin/Member/style.scss
@@ -1,6 +1,6 @@
 @import '../../../global.scss';
 .card-body {
-    padding: 0px;
+    padding: 0;
     .table-header {
         padding: 25px 24px 0 25px;
     }
