--- a/src/components/Common/Dropdown/style.scss
+++ b/src/components/Common/Dropdown/style.scss
@@ -22,6 +22,6 @@
     }
     &:focus,
     &:hover {
-        box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 0px 0px 4px rgba(16, 24, 40, 0.06);
+        box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 0 0 4px rgba(16, 24, 40, 0.06);
     }
 }
