--- a/src/components/Common/Heading/style.scss
+++ b/src/components/Common/Heading/style.scss
@@ -31,4 +31,14 @@ h5 {
 h5.light-title {
     color: $fonts-light;
 }
+h6 {
+    font-size: 0.82rem;
+    line-height: 1.3;
+    color: $fonts-grey-900;
+    font-weight: 500;
+}
+h6.light-title {
+    color: $fonts-light;
+    font-weight: normal;
+}
 
