--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -12,6 +12,7 @@
         font-size: 16px;
         line-height: 24px;
         color: $fonts-grey-900;
+        width: 100%;
         &.has-img {
             padding: 9px 14px 9px 33px;
         }
@@ -38,5 +39,10 @@
         position: absolute;
         bottom: -20px;
         left: 3px;
+    }
+    &.has-error {
+        input {
+            border: 1px solid red;
+        }
     }
 }
