--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,7 @@
 @import url("~bootstrap/scss/bootstrap.scss");
 
 // color variables
+$grey-500: #D0D5DD;
 $grey-300: #bbbbbb;
 $grey-200: #EAECF0;
 $grey-100: #f2f4f7;
@@ -192,7 +193,7 @@ path{
       line-height: 20px;
       color: $fonts-grey-700;
       width: 100%;
-      margin-top: 24px;
+      // margin-top: 24px;
       &:first-child {
         margin-top: 0;
       }
