--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -1,1 +1,22 @@
 @import '../../global.scss';
+
+.login-wrapper {
+
+    .login,
+    .bg-image {
+        min-height: 100vh;
+    }
+
+    .login-logo {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .bg-image {
+        background-color: $primary;
+        background-size: cover;
+        background-position: center center;
+
+    }
+}
