--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -13,6 +13,11 @@
         line-height: 24px;
         color: $fonts-grey-900;
         width: 100%;
+        &:focus,
+        &:hover {
+            box-shadow: none;
+            outline: none;
+        }
         &.has-img {
             padding: 9px 14px 9px 33px;
         }
@@ -23,6 +28,9 @@
             font-size: 16px;
             line-height: 24px;
             color: $fonts-light;
+        }
+        &.form-control:focus {
+            border: 1px solid $fonts-primary-200;
         }
     }
     .input-img {
