--- a/src/components/Admin/AdminTable/style.scss
+++ b/src/components/Admin/AdminTable/style.scss
@@ -1,22 +1,58 @@
 @import "../../../global.scss";
 
-  .view-more-btn .btn-primary {
+.view-more-btn {
+
+  .dropdown-toggle {
     color: transparent;
     background-color: transparent;
     border-color: transparent;
     box-shadow: none;
     padding: 0;
-}   
-  
-  .view-more-btn .btn:active:focus {
-    box-shadow: none;
+
+    &:active,
+    &:focus {
+      box-shadow: none;
+      color: transparent;
+      background-color: transparent;
+      border-color: transparent;
+      box-shadow: none;
+      padding: 0;
+    }
   }
-  
-  .view-more-btn span {
-    color: #222;
-    margin-left: 5px;
+
+  .dropdown-menu {
+    padding: 0;
+    border: 1px solid $grey-100;
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    border-radius: 8px;
+
+    .dropdown-item {
+      padding: 10px 18px;
+
+      &:hover,
+      &:focus,
+      &.active,
+      &:active {
+        background-color: transparent;
+        p {
+          color: $fonts-blue-600;
+          svg {
+            path {
+              stroke: $fonts-blue-600;
+            }
+          }
+        }
+      }
+
+      p {
+        margin-bottom: 0;
+        color: $fonts-grey-700;
+        font-weight: normal;
+
+        span {
+          margin-right: 12px;
+        }
+      }
+    }
   }
-  
-  .view-more-btn a {
-    text-decoration: none;
-  }
+}
