--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -1,134 +1,113 @@
 @import "../../../global.scss";
+
 .table-wrapper {
   width: 100%;
   overflow-x: auto;
-}
-table {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-  margin: 12px 0 0;
-  background-color: $white;
-  box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
-    0 1px 2px rgba(16, 24, 40, 0.06);
-  border-radius: 8px;
+  position: relative;
+  overflow-y: auto;
+  height: calc(100vh - 350px);
 
-  thead {
-    tr {
-      border-radius: 0;
-      th {
-        &:first-child {
-          padding-left: 24px;
-        }
-      }
-    }
-  }
-  tbody {
-    tr {
-      cursor: pointer;
-      &:nth-child(even) {
-        background-color: $grey-50;
-      }
-      &:first-child {
-        border-radius: 8px 8px 0 0;
-        td {
+  table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    background-color: $white;
+    box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
+      0 1px 2px rgba(16, 24, 40, 0.06);
+    border-radius: 8px;
+    border-collapse: collapse; 
+
+    thead {
+      tr {
+        border-radius: 0;
+
+        th {
+          padding: 13px 16px;
+          background-color: $grey-50;
+          color: $fonts-light;
+          font-size: 12px;
+          line-height: 18px;
+          text-align: left;
+          white-space: nowrap;
+
+          position: sticky;
+          top: 0;
+          box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+          z-index: 1;
+
           &:first-child {
-            border-radius: 8px 0 0 0;
+            padding-left: 24px;
           }
-          &:last-child {
-            border-radius: 0 8px 0 0;
-          }
-        }
-      }
-      &:last-child {
-        border-radius: 0 0 8px 8px;
-        td {
-          &:first-child {
-            border-radius: 0 0 0 8px;
-          }
-          &:last-child {
-            border-radius: 0 0 8px 0;
+
+          span {
+            margin-left: 10px;
           }
         }
       }
-      td {
+    }
+
+    tbody {
+      tr {
+        cursor: pointer;
+
+        &:nth-child(even) {
+          background-color: $grey-50;
+        }
+
         &:first-child {
-          padding-left: 24px;
-        }
-      cursor: pointer;
-      .table-modal{
-        width: 80px;
-        height: 70px;
-        display: none;
-      }
-      .open{
-        width: 80px;
-        height: 70px;
-        display: block;
-      }
-    }
-  }
-  td {
-    padding: 16px;
-    color: $fonts-light;
-    font-size: 14px;
-    line-height: 20px;
-    vertical-align: middle;
-    font-weight: 400;
-    .img-wrapper {
-      width: 40px;
-      height: 40px;
-      object-fit: cover;
-      margin-right: 12px;
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-    }
-    .campaign-name {
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 20px;
-      p {
-        margin: 0;
-        color: $fonts-light;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 120px;
-        &.title {
-          color: $fonts-grey-900;
-        }
-      }
-    }
-  }
-  th {
-    padding: 13px 16px;
-    background-color: $grey-50;
-    color: $fonts-light;
-    font-size: 12px;
-    line-height: 18px;
-    text-align: left;
-    white-space: nowrap;
-    &:first-child {
-      border-radius: 8px 0 0 0;
-    }
-    &:last-child {
-      border-radius: 0 0 0 8px;
-    }
-  }
-}
-}
+          border-radius: 8px 8px 0 0;
 
+          td {
+            &:first-child {
+              border-radius: 8px 0 0 0;
+            }
 
-.avatar-text{
-  width: 40px;
-  height: 40px;
-  font-size: 16px;
-  border-radius: 20px;
-  background-color: $primary-100;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+            &:last-child {
+              border-radius: 0 8px 0 0;
+            }
+          }
+        }
+
+        &:last-child {
+          border-radius: 0 0 8px 8px;
+
+          td {
+            &:first-child {
+              border-radius: 0 0 0 8px;
+            }
+
+            &:last-child {
+              border-radius: 0 0 8px 0;
+            }
+          }
+        }
+
+        td {
+          cursor: pointer;
+          padding: 16px;
+          color: $fonts-light;
+          font-size: 14px;
+          line-height: 20px;
+          vertical-align: middle;
+          font-weight: 400;
+
+          &:first-child {
+            padding-left: 24px;
+          }
+
+          .table-modal {
+            width: 80px;
+            height: 70px;
+            display: none;
+          }
+
+          .open {
+            width: 80px;
+            height: 70px;
+            display: block;
+          }
+        }
+      }
+    }
+  }
 }
