admin-screens #Under construction page

--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,7 @@ $danger-100: #FFEFEF;
 
 // fonts color
 $fonts-black: #111322;
+$fonts-white: #ffffff;
 $fonts-light: #667085;
 $fonts-primary-500: #556187;
 $fonts-primary-400: #7D89B0;
