--- a/src/components/Admin/Member/style.scss
+++ b/src/components/Admin/Member/style.scss
@@ -1,4 +1,8 @@
 @import '../../../global.scss';
+.card-bottom-none {
+    box-shadow: 0 -1px 2px rgb(16 24 40 / 10%), 0 -1px 2px rgb(16 24 40 / 6%) !important;
+    border-radius: 8px 8px 0px 0px !important;
+
 .card-body {
     padding: 0;
     .table-header {
@@ -10,6 +14,7 @@
         align-items: center;
         margin-bottom: 37px;
     }
+}
 }
 
 .search-filter-sort{
