--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -6,15 +6,18 @@
   position: relative;
   overflow-y: auto;
   height: calc(100vh - 350px);
+  
+  .infinite-scroll-component {
+    overflow: initial !important;
+  }
 
   table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
     background-color: $white;
-    box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
-      0 1px 2px rgba(16, 24, 40, 0.06);
-    border-radius: 8px;
+    box-shadow: 0 -1px 2px rgb(16 24 40 / 10%), 0 -1px 2px rgb(16 24 40 / 6%) ;
+    border-radius: 8px 80px 0px 0px; 
     border-collapse: collapse; 
 
     thead {
@@ -69,15 +72,15 @@
         }
 
         &:last-child {
-          border-radius: 0 0 8px 8px;
+          border-radius: 0 0 0px 0px;
 
           td {
             &:first-child {
-              border-radius: 0 0 0 8px;
+              border-radius: 0 0 0 0px;
             }
 
             &:last-child {
-              border-radius: 0 0 8px 0;
+              border-radius: 0 0 0px 0;
             }
           }
         }
