--- a/src/components/Common/SideBar/SidebarMenuListItemComponent/style.scss
+++ b/src/components/Common/SideBar/SidebarMenuListItemComponent/style.scss
@@ -3,7 +3,7 @@
 .list-wrapper {
     list-style-type: none;
     margin-bottom: 8px;
-    a {
+    &__link {
         color: $fonts-primary-200;
         text-decoration: none; 
         font-size: 16px;
@@ -18,6 +18,7 @@
         svg {
             min-width: 24px;
             height: 24px;
+            width: 24px;
             path {
                 stroke: $fonts-primary-200;
             }
@@ -37,5 +38,18 @@
             opacity: 0;
             transition: display 0s, opacity 0.5s linear;
         }
+        .dropdown-toggle{
+            border: none;
+            padding: 0;
+            background: transparent;
+            box-shadow: none;
+            width: 100%;
+            text-align: start;
+        }
+    }
+    .has-image{
+        margin-left: -12px;
+    }
+    .menu-item-image{
     }
 }
