feature/No-data #fixed no data, modal icon, modal button color

--- a/src/components/Common/Button/style.scss
+++ b/src/components/Common/Button/style.scss
@@ -51,3 +51,14 @@
 .btn-danger {
     background-color: $danger;
 }
+
+.btn-info {
+    background-color: $blue-600;
+    color: $white;
+    &:hover,
+    &:focus{
+        background-color: $blue-600;
+    color: $white;
+    }
+
+}
